Fixed: Changed loader from SVG to CSS. Mobile Apps: Loading splash screen now displays properly. Fixed: Bookmark item is now removed properly on mobile apps when deleting from search results.

--- a/css/animations.scss
+++ b/css/animations.scss
@@ -10,6 +10,29 @@
     }
 }
 
+@include keyframes (animate-loader) {
+    0% {
+        height: 4px;
+        margin-top: $loader-bar-height / 2 - 2px;
+        margin-bottom: $loader-bar-height / 2 - 2px;
+    }
+    50% {
+        height: 4px;
+        margin-top: $loader-bar-height / 2 - 2px;
+        margin-bottom: $loader-bar-height / 2 - 2px;
+    }
+    75% {
+        height: $loader-bar-height;
+        margin-top: 0px;
+        margin-bottom: 0px;
+    }
+    100% {
+        height: 4px;
+        margin-top: $loader-bar-height / 2 - 2px;
+        margin-bottom: $loader-bar-height / 2 - 2px;
+    }
+}
+
 @include keyframes(animate-slide-in) {
     0% {
         @include css-prefix(transform, translateX(105%));
