--- a/css/variables.scss
+++ b/css/variables.scss
@@ -22,3 +22,8 @@ $height-mobile-medium:      560px;
 $height-mobile-large:       640px;
 $height-mobile-xlarge:      720px;
 $height-tablet:             1024px;
+
+$loader-bar-width:          4px;
+$loader-bar-height:         20px;
+$loader-bar-color:          $colour-text2;
+$loader-bar-radius:         2px;
